# illyrian

./: CMakeLists.txt  README.md  illyrian.json
illyrian/: __init__.py  __main__.py  env.py  info.py  run.py  verify.py  version.py  wheel.py
illyrian/cmake/: illyrian.cmake
illyrian/cpython/: code.py  cpython310.py  cpython311.py  cpython36.py  cpython37.py  cpython38.py  cpython39.py
illyrian/manylinux/: code.py
illyrian/util/: code.py
scripts/: illyrian
